[package]
name = "ruuvi2mqtt"
version = "1.1.2-dev"
authors = ["Teemu Matilainen <teemu.matilainen@iki.fi>"]
license = "MIT"
homepage = "https://github.com/tmatilai/ruuvi2mqtt"
repository = "https://github.com/tmatilai/ruuvi2mqtt"
edition = "2021"
rust-version = "1.59"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0"
btleplug = "0.10.2"
clap = { version = "4.0.23", features = ["derive", "env", "wrap_help"] }
derivative = "2.2.0"
env_logger = "0.9.0"
futures = "0.3.19"
log = "0.4.17"
rand = "0.8.4"
rumqttc = "0.17.0"
ruuvi-sensor-protocol = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "2.0.1"
serde_yaml = "0.9.14"
sysinfo = "0.26.7"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
trycmd = "0.14.1"
