[package]
name = "ruuvi2mqtt"
version = "1.3.2-dev"
authors = ["Teemu Matilainen <teemu.matilainen@iki.fi>"]
license = "MIT"
homepage = "https://github.com/tmatilai/ruuvi2mqtt"
repository = "https://github.com/tmatilai/ruuvi2mqtt"
edition = "2021"
rust-version = "1.60"

[features]
default = ["vendored"]
vendored = ["dbus/vendored"]

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0"
btleplug = "0.10.2"
clap = { version = "4.0.23", features = ["derive", "env", "wrap_help"] }
derivative = "2.2.0"
env_logger = "0.10.0"
futures = "0.3.19"
log = "0.4.17"
rand = "0.8.4"
rumqttc = "0.21.0"
ruuvi-sensor-protocol = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "3.0.0"
serde_yaml = "0.9.14"
sysinfo = "0.29.3"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", optional = true }

[dev-dependencies]
trycmd = "0.14.1"
