[package]
name = "ruuvi2mqtt"
version = "1.3.4-dev"
authors = ["Teemu Matilainen <teemu.matilainen@iki.fi>"]
license = "MIT"
homepage = "https://github.com/tmatilai/ruuvi2mqtt"
repository = "https://github.com/tmatilai/ruuvi2mqtt"
edition = "2021"
rust-version = "1.69"

[features]
default = ["vendored"]
vendored = ["dbus/vendored"]

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0"
btleplug = "0.11.7"
clap = { version = "4.5.35", features = ["derive", "env", "wrap_help"] }
derive_more = { version = "2.0.1", features = ["debug"] }
env_logger = "0.11.6"
futures = "0.3.19"
log = "0.4.27"
rand = "0.9.0"
rumqttc = "0.24.0"
ruuvi-sensor-protocol = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
serde_yaml = "0.9.14"
sysinfo = "0.34.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", optional = true }

[dev-dependencies]
trycmd = "0.15.9"
