[package]
name = "ruuvi2mqtt-esp32"
version = "1.4.0"
authors = ["Teemu Matilainen <teemu.matilainen@iki.fi>"]
license = "MIT"
homepage = "https://github.com/tmatilai/ruuvi2mqtt"
repository = "https://github.com/tmatilai/ruuvi2mqtt"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "ruuvi2mqtt-esp32"
harness = false # required: ESP-IDF entry point is not compatible with the test harness

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
anyhow = "1.0"
esp-idf-svc = "0.52.1"
esp32-nimble = "0.12.0"
ruuvi-sensor-protocol = "0.6.1"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
konst = "0.4.3"

[build-dependencies]
embuild = { version = "0.33.1", features = ["espidf"] }
